<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Elite Wallpapers</string>
    <string name="app_label">Other Wallpapers</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="link_other_app">Other apps</string>
    <string name="share">Share!</string>
    <string name="warning_title">Warning</string>
    <string name="no_wallpapers_message">Black picture to save battery power.\nThe most effective on AMOLED display.</string>
    <string name="ad_nw_yes_btn">Yes</string>
    <string name="ad_nw_no_btn">No</string>
    <string name="img_install_done">Done</string>
    <string name="negative_button_clicked">OK! You boss!</string>
    <string name="about_moto">Elite\nWallpapers</string>
    <string name="about_moto_second">Wallpapers</string>
    <string name="about_text">This is a small application\nwritten specifically\nfor fans of the brand\n<b>MOTOROLA</b>!</string>
    <string name="awerd">by\nAVERD SOFT</string>
    <string name="thanks_for_click">Thanks. :-)</string>
    <string name="analytics">Analytics</string>
    <string name="by">by</string>


    <!--New-->
    <string name="clear_wallpaper_title">Clear wallpaper</string>
    <string name="black_wallpaper_title">Black wallpaper</string>
    <string name="what_is_new_title">What is new</string>
    <string name="about_info_title">About info</string>
    <string name="menu_title">Menu</string>
    <string name="close_title">close</string>
    <string name="install_title">install</string>
    <string name="ratio_title">Aspect ratio</string>
    <string name="save_title">save</string>
    <string name="select_ratio_title">Select ratio</string>
    <string name="change_title">change</string>
    <string name="bad_internet_msg">Your internet connection is very bad. Come back later!</string>
    <string name="ads_again_msg">Wow. Thanks!\nLooking forward to seeing you again.</string>
    <string name="warning_message_not_supported_lock_screen">Some device not supported install wallpaper in lock screen!</string>
    <string name="default_ration_message">Default ratio 16:9. For change click CHANGE or later you can cache in settings!</string>
    <string name="select_text">Select</string>
    <string name="value_update_message">Value update</string>
    <string name="choice_screen_title">Choice screen</string>
    <string name="all_screens_title">all screens</string>
    <string name="system_screen_title">system screen</string>
    <string name="lock_screen_title">lock screen</string>
    <string name="install_wallpaper_done">Install wallpaper done!</string>
    <string name="reset_title">reset</string>
    <string name="done_title">done</string>
    <string name="cancel_title" tools:ignore="ButtonCase">cancel</string>
    <string name="reset_to_default_wallpaper_msg">Reset to default wallpaper.</string>
    <string name="reset_wallpaper_fail_msg">Reset wallpaper fail. :-(</string>
    <string name="resolution_low_warning_msg">The resolution of the selected area is very low - quality loss is inevitable.</string>
    <string name="original_wallpaper_size_title">original</string>
    <string name="crop_wallpaper_size_title">crop</string>
    <string name="watch_ads_title">watch ads</string>
    <string name="loading_ads_message">Please wait one moment.\nLoading ads.</string>
    <string name="click_for_close">click again to close</string>
    <string name="screen_close_msg">Screen close after 10 sec</string>
    <string name="ads_thanks_msg">Thanks a lot.\nWe really appreciate it.</string>
    <string name="something_msg">Oh something went wrong.\nCome back later.</string>
    <string name="no_ads_to_show_msg">Unfortunately,\nthere are no ads to display yet.</string>
    <string name="close_ads_msg">Wow You have closed ads ahead of time.\Thanks for the support.\nCome back later.</string>
    <string name="ads_user_message">Hey user.\nThank you for visiting this screen.\n\nWe, like everyone, do not like advertising and try to protect our favorite users from advertising as much possible.\nWe also love our products and really want to develop our products in the future…\nDear user, let us steal a couple of minutes of your life.\n\nPlease watch this promotional video.</string>
    <string name="screen_size_title">screen size</string>
    <string name="email_title">Send feedback</string>
    <string name="web_site_title">Website</string>
    <string name="gp_title" translatable="false">Google Play</string>
    <string name="about_app_title">About App</string>
    <string name="info_title">Info</string>
    <string name="send_us_email_msg">Share your ideas or concerns with us.</string>
    <string name="wallpaper_installing_title">installing</string>
    <string name="now_close_ads">You can close ads now.</string>
    <string name="open_us_website">open website</string>
    <string name="install_black_wallpaper_description">install black wallpaper</string>
    <string name="random_shortcut_title">random</string>
    <string name="random_shortcut_description">install random wallpaper</string>

    <string name="company_name">AVERD SOFT</string>
    <string name="averd_web" translatable="false">https://averd-soft.ru/en/</string>
    <string name="averd_gp_link" translatable="false">"https://play.google.com/store/apps/dev?id=6812241770877419123"</string>
    <string name="averd_email" translatable="false">averdsoft@gmail.com</string>
</resources>