<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/af_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary_color"
    app:layoutDescription="@xml/ads_fragment_layout_scene">

    <com.isanechek.elitawallpaperx.widgets.SuperToolbar
        android:id="@+id/af_toolbar"
        android:layout_width="@dimen/dp0"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/af_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <ImageView
        android:id="@+id/af_icon_iv"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/af_top_guideline"
        app:srcCompat="@drawable/handshake_icon_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/af_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/af_user_message"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:gravity="center"
        android:text="@string/ads_user_message"
        android:textColor="@color/my_white_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/af_center_guideline" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/af_lottie_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/af_load_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/af_center_guideline"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/af_lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/af_load_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/af_center_guideline" />

    <com.isanechek.elitawallpaperx.widgets.TypedKtView
        android:id="@+id/af_load_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading_ads_message"
        android:textColor="@color/my_white_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:animateOnLoad="false"
        app:delay="1000"
        app:isAnimatedByWord="false"
        app:isLooped="false"

        app:layout_constraintBottom_toTopOf="@id/af_bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/af_center_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/af_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ad_watch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp8"
        android:text="@string/watch_ads_title"
        android:textColor="@color/my_white_color"
        android:textSize="18sp"
        app:cornerRadius="@dimen/dp8"
        app:layout_constraintBottom_toTopOf="@id/af_bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/my_white_color"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/af_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />


</androidx.constraintlayout.motion.widget.MotionLayout>