<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ConstraintSet android:id="@+id/ads_scene_start">
        <Constraint
            android:id="@id/af_toolbar"
            android:layout_width="@dimen/dp0"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@id/af_icon_iv"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_top_guideline">
            <PropertySet android:visibility="visible" />
        </Constraint>

        <Constraint
            android:id="@id/af_user_message"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_center_guideline">
            <PropertySet android:visibility="visible" />

        </Constraint>

        <Constraint
            android:id="@id/ad_watch_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp8"
            app:layout_constraintBottom_toTopOf="@id/af_bottom_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <CustomAttribute
                app:attributeName="text"
                app:customStringValue="@string/watch_ads_title" />
        </Constraint>

        <Constraint
            android:id="@+id/af_load_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/af_bottom_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_center_guideline">
            <PropertySet android:visibility="gone" />
        </Constraint>

        <Constraint
            android:id="@+id/af_lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/af_load_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_center_guideline">
            <PropertySet android:visibility="gone" />
        </Constraint>

        <Constraint
            android:id="@+id/af_lottie_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/af_load_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_center_guideline">
            <PropertySet android:visibility="gone" />
        </Constraint>

    </ConstraintSet>

    <ConstraintSet android:id="@+id/ads_scene_end">
        <Constraint
            android:id="@id/af_toolbar"
            android:layout_width="@dimen/dp0"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@id/af_icon_iv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/dp16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_top_guideline">
            <PropertySet android:visibility="gone" />
        </Constraint>

        <Constraint
            android:id="@id/af_user_message"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            app:layout_constraintBottom_toTopOf="@id/af_bottom_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_center_guideline">
            <PropertySet android:visibility="gone" />
        </Constraint>

        <Constraint
            android:id="@id/ad_watch_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_bottom_guideline">
            <CustomAttribute
                app:attributeName="text"
                app:customStringValue="@string/cancel_title" />
        </Constraint>
        <Constraint
            android:id="@+id/af_load_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@id/af_bottom_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_end_guideline">
            <PropertySet android:visibility="visible" />
        </Constraint>

        <Constraint
            android:id="@+id/af_lottie_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/af_load_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_top_guideline">
            <PropertySet android:visibility="visible" />
        </Constraint>

        <Constraint
            android:id="@+id/af_lottie"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@id/af_load_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_top_guideline">
            <PropertySet android:visibility="visible" />
        </Constraint>


    </ConstraintSet>

    <Transition
        app:constraintSetEnd="@id/ads_scene_end"
        app:constraintSetStart="@+id/ads_scene_start"
        app:duration="300"
        app:motionInterpolator="linear">
        <KeyFrameSet>
            <KeyAttribute
                android:visibility="visible"
                app:motionProgress="0"
                app:motionTarget="@string/ads_user_message" />
            <KeyAttribute
                android:visibility="invisible"
                app:motionProgress="25"
                app:motionTarget="@string/ads_user_message" />
            <KeyAttribute
                android:visibility="gone"
                app:motionProgress="55"
                app:motionTarget="@string/ads_user_message" />
        </KeyFrameSet>
    </Transition>
</MotionScene>
